# mini-ibus

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  任务清单.md  方案介绍.md
addons/: CMakeLists.txt
core/: CMakeLists.txt  address.cc  address.h  connection.cc  connection.h  errors.cc  errors.h  logging.cc  logging.h  message_codec.cc  message_codec.h
examples/: CMakeLists.txt
ibusd/: CMakeLists.txt
proto/: CMakeLists.txt  message.proto  topology.proto
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  address_test.cc  connection_test.cc  errors_test.cc  logging_test.cc  message_codec_test.cc  proto_test.cc
tools/: CMakeLists.txt
